# Cache-Manager

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  cache_main.cc  cache_manager.cc  main.cc  reader.cc  writer.cc
src/data/: reader1.txt  reader_file.txt  writer1.txt  writer_file.txt
src/include/: cache_main.h  cache_manager.h  reader.h  writer.h
test/: CMakeLists.txt  cache_main_test.cc  cache_manager_test.cc  reader_test.cc  writer_test.cc
